# opencode-boilerplate-web

./: .gitignore  AGENTS.md  DEV.md  README.md  devenv.nix  justfile  pyproject.toml
backend/: README.md  justfile  pyproject.toml
backend/boilerplate_app/: cattrs_example.py  cli.py  duckdb_example.py  polars_example.py  wsgi.py
backend/boilerplate_app/web/: __init__.py  routes.py
backend/boilerplate_app/web/templates/: index.html
frontend/: README.md  index.html  justfile  package.json  vite.config.ts
frontend/src/: main.ts
langcurl_app/: cli.py
