[project]
name = "langcurl"
version = "0.1.0"
description = "A simple Click-based hello world app with langnet API integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "sh>=1.14.3",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langcurl_app"]

[project.scripts]
langcurl = "langcurl_app.cli:langcurl"
