[project]
name = "boilerplate-cli"
version = "0.1.0"
description = "A boilerplate CLI application demonstrating modern Python tooling with Nix/devenv"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "sh>=1.14.3",
    "rich>=13.0.0",
    "duckdb>=0.9.0",
    "polars>=0.20.0",
    "cattrs>=23.0.0",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "gunicorn>=21.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boilerplate_app"]

[project.scripts]
boilerplate-cli = "boilerplate_app.cli:app"
